tests/NormalTests/paczka1/fuzzy1/78052148.err
Error in line 13: IAeNgJWOWB A718 53,6
Error in line 18: ivBTB A718 58,5
Error in line 20: ivBTB A167 54,6
Error in line 21: 9tPeIao1W A718 90,3
Error in line 31: 4PTl67Skfl A718 75,6
Error in line 29: ivBTB A167 62,4
